--- a/.env
+++ b/.env
@@ -1,39 +1,31 @@
-# --- Camera RTSP sources for go2rtc.yaml ---
-PTZ_RTSP=rtsp://USER:PASS@192.168.1.50:554/Streaming/Channels/101
-FIXED_RTSP=rtsp://USER:PASS@192.168.1.60:554/Streaming/Channels/101
-
-# --- ONVIF (PTZ) camera connection for FastAPI service ---
-PTZ_HOST=192.168.1.50
-PTZ_PORT=80
-PTZ_USERNAME=admin
-PTZ_PASSWORD=changeme
-
-# Optional ONVIF settings (profile tokens, etc.)
-PTZ_PROFILE_TOKEN=Profile_1
-PTZ_TIMEOUT_SEC=5
-
-# --- FastAPI service config ---
-API_HOST=0.0.0.0
-API_PORT=8089
-
-# CORS: comma-separated origins you’ll open ui.html from (desktop/phone/LAN)
-CORS_ALLOW_ORIGINS=http://localhost:8090,http://127.0.0.1:8090
-
-# --- Camera RTSP sources for go2rtc ---
+# ===== Camera RTSP sources for go2rtc =====
 PTZ_RTSP=rtsp://USER:PASS@10.20.2.122:554/iis/live/1/2#rtsp_transport=tcp
 FIXED_RTSP=rtsp://USER:PASS@10.20.2.121:554/iis/live/1/2#rtsp_transport=tcp
 
-# --- FastAPI PTZ service (change if you prefer another port) ---
+# ===== ONVIF / PTZ API camera config (two cameras) =====
+CAM1_HOST=10.20.2.122
+CAM1_PORT=80
+CAM1_USER=USER
+CAM1_PASS=PASS
+CAM1_PROFILE_TOKEN=
+
+CAM2_HOST=10.20.2.121
+CAM2_PORT=80
+CAM2_USER=USER
+CAM2_PASS=PASS
+CAM2_PROFILE_TOKEN=
+
+# ===== FastAPI PTZ service (container listens on 8088; host maps to 8089) =====
 API_HOST=0.0.0.0
-API_PORT=8089
+API_PORT=8088
 
-# CORS: where you'll open ui.html from (add LAN origins as needed)
-CORS_ALLOW_ORIGINS=http://localhost:8090,http://127.0.0.1:8090
+# ===== CORS (where you’ll open ui.html from) =====
+CORS_ORIGINS=http://localhost:1985,http://127.0.0.1:1985,http://localhost:8090,http://127.0.0.1:8090
 
-# --- go2rtc http/api/web ---
+# ===== go2rtc (container listens on 1984; host maps to 1985) =====
 GO2RTC_HTTP_PORT=1984
 GO2RTC_ENABLE_HLS=true
 GO2RTC_STUN=stun.l.google.com:19302
 
-# --- go2rtc web UI/HTTP ---
-GO2RTC_HTTP_PORT=1985
+# ===== Misc =====
+TZ=America/Los_Angeles
