Refactor Dockerfile and add system libraries
Updated Dockerfile to improve structure and added necessary system libraries.

--- a/ptz-api/Dockerfile
+++ b/ptz-api/Dockerfile
@@ -1,12 +1,17 @@
 FROM python:3.11-slim
 
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
-
-RUN pip install --no-cache-dir fastapi uvicorn[standard] onvif-zeep pydantic-settings
-
 WORKDIR /app
-COPY app.py /app/app.py
+COPY requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
+
+# system libs sometimes needed by zeep/SOAP/wsdl
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libxml2 libxslt1.1 && rm -rf /var/lib/apt/lists/*
+
+COPY app.py ./
+
+ENV API_HOST=0.0.0.0
+ENV API_PORT=8088
 
 EXPOSE 8088
 CMD ["uvicorn", "app:api", "--host", "0.0.0.0", "--port", "8088"]
